--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -12,8 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-# CockroachDB quirks — disable sequences in favour of UUID
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# PostgreSQL Standard Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=5
 
