fix: prefix DATABASE_URL with jdbc: for Postgres connection

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -3,9 +3,10 @@ spring.application.name=food-ordering
 # =============================================
 # DATABASE — CockroachDB / PostgreSQL (hosted)
 # Set DATABASE_URL in your environment / Render
-# Format: postgresql://<user>:<password>@<host>/<db>?sslmode=require
+# Format (Native): postgresql://<user>:<password>@<host>/<db>?sslmode=require
+# Spring Boot requires the jdbc: prefix, so we add it dynamically here.
 # =============================================
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
