fix: use standard SPRING_DATASOURCE env variables

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,12 +1,11 @@
 spring.application.name=food-ordering
 
+# Spring Boot requires JDBC URLs, Usernames, and Passwords to be separate.
+# We will set these directly in Render as SPRING_DATASOURCE_URL, etc.
 # =============================================
-# DATABASE — CockroachDB / PostgreSQL (hosted)
-# Set DATABASE_URL in your environment / Render
-# Format (Native): postgresql://<user>:<password>@<host>/<db>?sslmode=require
-# Spring Boot requires the jdbc: prefix, so we add it dynamically here.
-# =============================================
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
