fix: disable elasticsearch by default in prod to prevent connection refused crashes

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -28,8 +28,8 @@ spring.cache.type=redis
 # ELASTICSEARCH — Bonsai.io or Elastic Cloud
 # Set ELASTICSEARCH_URL in your environment
 # =============================================
-spring.data.elasticsearch.repositories.enabled=true
-spring.elasticsearch.uris=${ELASTICSEARCH_URL:http://localhost:9200}
+spring.data.elasticsearch.repositories.enabled=${ENABLE_ELASTICSEARCH:false}
+spring.elasticsearch.uris=${ELASTICSEARCH_URL:}
 
 # =============================================
 # CORS — set FRONTEND_URL to your Vercel domain
