fix: restore dummy elasticsearch url to satisfy RestClientBuilder when ES is disabled

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -29,7 +29,7 @@ spring.cache.type=redis
 # Set ELASTICSEARCH_URL in your environment
 # =============================================
 spring.data.elasticsearch.repositories.enabled=${ENABLE_ELASTICSEARCH:false}
-spring.elasticsearch.uris=${ELASTICSEARCH_URL:}
+spring.elasticsearch.uris=${ELASTICSEARCH_URL:http://localhost:9200}
 
 # =============================================
 # CORS — set FRONTEND_URL to your Vercel domain
