--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,18 @@ spring.data.elasticsearch.repositories.enabled=false
 
 # Server Configuration
 server.port=8080
+# Spring Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-app-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Twilio Configuration
+twilio.account.sid=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+twilio.auth.token=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+twilio.from.phone=+1234567890
+
+# OTP Settings
+otp.expiration.minutes=5
