--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -39,3 +39,14 @@ app.cors.allowed-origin=${FRONTEND_URL:http://localhost:5173}
 
 # Server
 server.port=${PORT:8080}
+
+# Spring Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=harshbohra2208@gmail.com
+spring.mail.password=cisueyljzgecetis
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
