Fix OTP mail delivery: update SMTP config to Port 587 and enhance logging

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -42,11 +42,9 @@ server.port=${PORT:8080}
 
 # Spring Mail Configuration
 spring.mail.host=smtp.gmail.com
-spring.mail.port=465
+spring.mail.port=587
 spring.mail.username=harshbohra2208@gmail.com
 spring.mail.password=cisueyljzgecetis
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.socketFactory.port=465
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.starttls.required=true
