Security: Move SMTP credentials to environment variables

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -43,8 +43,8 @@ server.port=${PORT:8080}
 # Spring Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=harshbohra2208@gmail.com
-spring.mail.password=cisueyljzgecetis
+spring.mail.username=${SPRING_MAIL_USERNAME:harshbohra2208@gmail.com}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
