--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,15 +30,15 @@ server.port=8080
 # Spring Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=harshbohra2208@gmail.com
-spring.mail.password=cisueyljzgecetis
+spring.mail.username=${SPRING_MAIL_USERNAME:harshbohra2208@gmail.com}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Twilio Configuration
-twilio.account.sid=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-twilio.auth.token=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-twilio.from.phone=+1234567890
+twilio.account.sid=${TWILIO_ACCOUNT_SID:ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
+twilio.auth.token=${TWILIO_AUTH_TOKEN:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
+twilio.from.phone=${TWILIO_FROM_PHONE:+1234567890}
 
 # OTP Settings
 otp.expiration.minutes=5
