--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -52,4 +52,4 @@ spring.mail.properties.mail.smtp.starttls.required=true
 # Twilio Configuration
 twilio.account.sid=${TWILIO_ACCOUNT_SID:ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
 twilio.auth.token=${TWILIO_AUTH_TOKEN:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
-twilio.from.phone=${TWILIO_FROM_PHONE:+1234567890}
+twilio.verify.service.sid=${TWILIO_VERIFY_SERVICE_SID:VAxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
