Switch to SMTPS Port 465 for Email OTP to resolve Render connection timeouts

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -40,14 +40,15 @@ app.cors.allowed-origin=${FRONTEND_URL:http://localhost:5173}
 # Server
 server.port=${PORT:8080}
 
-# Spring Mail Configuration
+# Spring Mail Configuration (SMTPS Port 465 for Cloud compatibility)
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=${SPRING_MAIL_USERNAME:harshbohra2208@gmail.com}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 
 # Twilio Configuration
 twilio.account.sid=${TWILIO_ACCOUNT_SID:ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
