Fix SMTP timeout application by using mail.smtps prefix for smtps protocol

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -45,12 +45,12 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.username=${SPRING_MAIL_USERNAME:harshbohra2208@gmail.com}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.properties.mail.smtp.connectiontimeout=10000
-spring.mail.properties.mail.smtp.timeout=10000
-spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtps.auth=true
+spring.mail.properties.mail.smtps.ssl.enable=true
+spring.mail.properties.mail.smtps.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtps.connectiontimeout=10000
+spring.mail.properties.mail.smtps.timeout=10000
+spring.mail.properties.mail.smtps.writetimeout=10000
 spring.mail.properties.mail.debug=true
 # Use smtps protocol explicitly for port 465
 spring.mail.protocol=smtps
