--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -40,20 +40,25 @@ app.cors.allowed-origin=${FRONTEND_URL:http://localhost:5173}
 # Server
 server.port=${PORT:8080}
 
-# Spring Mail Configuration (SMTPS Port 465 for Cloud compatibility)
+# Spring Mail Configuration (Robust Port 465)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.username=${SPRING_MAIL_USERNAME:harshbohra2208@gmail.com}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtps.auth=true
-spring.mail.properties.mail.smtps.ssl.enable=true
-spring.mail.properties.mail.smtps.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.debug=true
+
+# Redundant timeouts to catch whichever prefix the provider uses
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtps.connectiontimeout=10000
 spring.mail.properties.mail.smtps.timeout=10000
-spring.mail.properties.mail.smtps.writetimeout=10000
-spring.mail.properties.mail.debug=true
-# Use smtps protocol explicitly for port 465
-spring.mail.protocol=smtps
+
+# SSL Configuration for Port 465
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtps.ssl.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
 
 # Twilio Configuration
 twilio.account.sid=${TWILIO_ACCOUNT_SID:ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
