--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -40,25 +40,16 @@ app.cors.allowed-origin=${FRONTEND_URL:http://localhost:5173}
 # Server
 server.port=${PORT:8080}
 
-# Spring Mail Configuration (Robust Port 465)
-spring.mail.host=smtp.gmail.com
-spring.mail.port=465
-spring.mail.username=${SPRING_MAIL_USERNAME:harshbohra2208@gmail.com}
+# Spring Mail — Brevo SMTP Relay (Port 587 + STARTTLS, works on Render)
+spring.mail.host=${SPRING_MAIL_HOST:smtp-relay.brevo.com}
+spring.mail.port=${SPRING_MAIL_PORT:587}
+spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.debug=true
-
-# Redundant timeouts to catch whichever prefix the provider uses
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
-spring.mail.properties.mail.smtps.connectiontimeout=10000
-spring.mail.properties.mail.smtps.timeout=10000
-
-# SSL Configuration for Port 465
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtps.ssl.enable=true
-spring.mail.properties.mail.smtp.socketFactory.port=465
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
 
 # Twilio Configuration
 twilio.account.sid=${TWILIO_ACCOUNT_SID:ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
