--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -45,6 +45,7 @@ spring.mail.host=${SPRING_MAIL_HOST:smtp-relay.brevo.com}
 spring.mail.port=${SPRING_MAIL_PORT:587}
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.from=${SPRING_MAIL_FROM:harshbohra2208@gmail.com}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
