Switch email OTP to Brevo HTTP REST API (HTTPS port 443) - bypasses Render SMTP block

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -40,17 +40,9 @@ app.cors.allowed-origin=${FRONTEND_URL:http://localhost:5173}
 # Server
 server.port=${PORT:8080}
 
-# Spring Mail — Brevo SMTP Relay (Port 587 + STARTTLS, works on Render)
-spring.mail.host=${SPRING_MAIL_HOST:smtp-relay.brevo.com}
-spring.mail.port=${SPRING_MAIL_PORT:587}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+# Brevo HTTP API (replaces SMTP — bypasses Render network restrictions)
+brevo.api.key=${BREVO_API_KEY}
 spring.mail.from=${SPRING_MAIL_FROM:harshbohra2208@gmail.com}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=10000
-spring.mail.properties.mail.smtp.timeout=10000
 
 # Twilio Configuration
 twilio.account.sid=${TWILIO_ACCOUNT_SID:ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
