--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ spring.datasource.hikari.maximum-pool-size=5
 # Set REDIS_URL in your environment
 # =============================================
 spring.data.redis.url=${REDIS_URL:redis://localhost:6379}
-spring.cache.type=none
+spring.cache.type=redis
 
 # =============================================
 # ELASTICSEARCH — Bonsai.io or Elastic Cloud
